--- a/components/referals/Referrals.module.scss
+++ b/components/referals/Referrals.module.scss
@@ -1,82 +1,12 @@
-.success {
-    display: flex;
-    align-items: center;
-    margin-bottom: 1rem;
+.section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: var(--bg-1);
+  padding: 2rem 0;
+  gap: 8.5rem;
 
-    p {
-        font-weight: bold;
-        margin-left: 1rem;
-        font-size: 1rem !important;
-    }
-}
-
-.error {
-    color: #ED6F82;
-    font-size: 0.75rem;
-    margin-bottom: 7px;
-}
-
-.input {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    position: relative;
-
-    &.wrap {
-        flex-direction: row;
-        gap: 0;
-    }
-
-    .icon {
-        position: absolute;
-        left: 1.5rem;
-        top: 1.5rem;
-    }
-
-    input {
-        font-family: var(--font-body);
-        font-size: 1.25rem;
-        color: var(--txt-3);
-        padding-left: 3.75rem;
-        width: 100%;
-        height: 4rem;
-        background-color: var(--bg-0);
-        border: 1px solid var(--txt-0);
-        border-radius: 8px;
-
-        &.input__thin {
-            border-radius: 8px 0 0 8px;
-        }
-
-        &.input__noicon {
-            padding-left: 1.25rem;
-        }
-    }
-
-    button {
-        font-family: var(--font-body);
-        font-size: 1.25rem;
-        font-weight: bold;
-        color: var(--bg-0);
-        width: 100%;
-        height: 4rem;
-        background-color: var(--txt-2);
-        border: 1px solid var(--txt-0);
-        border-radius: 8px;
-        cursor: pointer;
-
-
-
-        &.button__thin {
-            width: fit-content;
-            padding: 0 1.5rem;
-            border-radius: 0 8px 8px 0;
-            border-left: none;
-        }
-    }
-}
-
-.form {
+  .form {
     width: 34rem;
     height: 50rem;
     background-color: var(--bg-4);
@@ -85,112 +15,230 @@
     opacity: 1;
 
     .container {
-        height: 100%;
-        padding: 4rem;
+      height: 100%;
+      padding: 4rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+
+      .content {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        gap: 2rem;
 
-        .content {
-            display: flex;
-            flex-direction: column;
-            gap: 2rem;
-
-            h1 {
-                font-size: 3rem;
-                text-transform: uppercase;
-            }
-
-            p {
-                font-size: 1.25rem;
-            }
-
-            form {
-                display: flex;
-                flex-direction: column;
-            }
-
-
+        h1 {
+          font-size: 3rem;
+          text-transform: uppercase;
         }
 
-        .limit {
+        p {
+          font-size: 1.25rem;
+        }
+
+        .success {
+          display: flex;
+          align-items: center;
+          margin-bottom: 1rem;
+
+          p {
+            font-weight: bold;
+            margin-left: 1rem;
+            font-size: 1rem !important;
+          }
+        }
+
+        .error {
+          color: #ed6f82;
+          font-size: 0.75rem;
+          margin-bottom: 7px;
+        }
+
+        .input {
+          display: flex;
+          flex-direction: column;
+          gap: 1rem;
+          position: relative;
+
+          &.wrap {
+            flex-direction: row;
+            gap: 0;
+          }
+
+          .icon {
+            position: absolute;
+            left: 1.5rem;
+            top: 1.5rem;
+          }
+
+          input {
+            font-family: var(--font-body);
+            font-size: 1.25rem;
             color: var(--txt-3);
-        }
-    }
-}
+            padding-left: 3.75rem;
+            width: 100%;
+            height: 4rem;
+            background-color: var(--bg-0);
+            border: 1px solid var(--txt-0);
+            border-radius: 8px;
 
-.steps {
+            &.input__thin {
+              border-radius: 8px 0 0 8px;
+            }
+
+            &.input__noicon {
+              padding-left: 1.25rem;
+            }
+          }
+
+          button {
+            font-family: var(--font-body);
+            font-size: 1.25rem;
+            font-weight: bold;
+            color: var(--bg-0);
+            width: 100%;
+            height: 4rem;
+            background-color: var(--txt-2);
+            border: 1px solid var(--txt-0);
+            border-radius: 8px;
+            cursor: pointer;
+
+            &.button__thin {
+              width: fit-content;
+              padding: 0 1.5rem;
+              border-radius: 0 8px 8px 0;
+              border-left: none;
+            }
+          }
+        }
+      }
+
+      .limit {
+        color: var(--txt-3);
+      }
+    }
+  }
+
+  .steps {
     display: flex;
     flex-direction: column;
     gap: 4rem;
-}
 
-.item {
-    display: flex;
-    align-items: center;
-    gap: 3.5rem;
+    .item {
+      display: flex;
+      align-items: center;
+      gap: 3.5rem;
 
-    &.right {
+      &.right {
         flex-direction: row-reverse;
         justify-content: flex-end;
-    }
+      }
 
-    &.left {
+      &.left {
         flex-direction: row;
         justify-content: flex-start;
-    }
+      }
 
-    .text {
+      .text {
         display: flex;
         flex-direction: column;
         width: 16rem;
         gap: 1rem;
 
         h4 {
-            color: var(--txt-2);
-            font-size: 1.25rem;
-            text-transform: uppercase;
+          color: var(--txt-2);
+          font-size: 1.25rem;
+          text-transform: uppercase;
         }
 
         h3 {
-            font-size: 2rem;
-            text-transform: uppercase;
+          font-size: 2rem;
+          text-transform: uppercase;
         }
 
         p {
-            font-size: 1.25rem;
+          font-size: 1.25rem;
         }
+      }
     }
+  }
 }
 
 @media (max-width: 480px) {
-    .item {
-        gap: 1.5rem;
+  .section {
+    flex-direction: column;
+    padding: 2rem 1rem;
+    gap: 3.125rem;
+  }
 
-        &.right {
-            flex-direction: column;
-            justify-content: center;
-        }
+  .item {
+    gap: 1.5rem;
 
-        &.left {
-            flex-direction: column;
-            justify-content: center;
-        }
-
-        .text {
-            align-items: center;
-            width: 100%;
-            
-            h4 {
-                font-size: 1rem;
-            }
-
-            p {
-                text-align: center;
-                font-size: 1rem;
-            }
-        }
-
+    &.right {
+      flex-direction: column;
+      justify-content: center;
     }
-}
 
+    &.left {
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    .text {
+      align-items: center;
+      width: 100%;
+
+      h4 {
+        font-size: 1rem;
+      }
+
+      p {
+        text-align: center;
+        font-size: 1rem;
+      }
+    }
+  }
+
+  .form {
+    width: 100%;
+    height: fit-content;
+
+    .container {
+      padding: 1rem;
+
+      .content {
+        margin-bottom: 71px;
+
+        h1 {
+          font-size: 2rem;
+        }
+
+        p {
+          font-size: 1rem;
+        }
+      }
+    }
+  }
+
+  .input {
+    &.wrap {
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    input {
+      font-size: 1rem;
+      &.input__thin {
+        border-radius: 8px;
+      }
+    }
+
+    button {
+      font-size: 1rem;
+      &.button__thin {
+        width: 100%;
+        border-radius: 8px;
+        border: 1px solid var(--txt-0);
+      }
+    }
+  }
+}
